--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sara Alqahtani | AI Portfolio</title>
+  <title>Sara Alqahtani | Portfolio</title>
 
   <style>
     :root{
@@ -652,3 +652,4 @@ I build end-to-end AI solutions from model pipelines to full-stack web applicati
 
 </body>
 </html>
+
